kubectl/kino-ingress/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "kino-ingress"
  namespace: "kino"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    external-dns.alpha.kubernetes.io/hostname: kino.sandbox.aws.wps.de
  labels:
    app: kino
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: "kino-service"
              servicePort: 80
